syntax = "proto3";
package msg;

//protoc --go_out=. xxx.proto

// id : 0
message RegisterReq{
    string name = 1;
    string pass = 2;
}

// id : 1
message RegisterRsp{
    bool success = 1;
}


// id : 2
message LoginReq {
    string name = 1;
    string pass = 2;
}

// id : 3
message LoginRsp {
    bool success = 1;
    string name = 2;
    int32 rank = 3;
}

// id : 4, 请求匹配
message MatchReq {
    int32 type = 1; // 0 : 1v1, 1 : 2v2
}

// id : 5, 匹配成功
message MatchRsp {

}

// id : 6
message MatchCancelReq {

}

// id : 7
message MatchCancelRsp {
    bool success = 1;
}


